test/tests/compiler/18_structures/invalid_lex/plx1_m4_define_no_suffix.plx
define(EXIT_ZERO, 0)

pub fn main(none) i32 {
    return EXIT_ZERO
}
